# ffmpeg_encoder_decoder

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yaml
include/ffmpeg_encoder_decoder/: decoder.hpp  encoder.hpp  safe_param.hpp  tdiff.hpp  types.hpp  utils.hpp
src/: decoder.cpp  encoder.cpp  tdiff.cpp  utils.cpp
test/: encoder_test.cpp
