<?xml version="1.0"?>
<package format="3">
  <name>ffmpeg_encoder_decoder</name>
  <version>1.0.0</version>
  <description>ROS2 convenience wrapper around ffmpeg for encoding/decoding</description>
  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>Apache2</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>
  <buildtool_depend>ros_environment</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>ffmpeg</depend>
    <depend>libavdevice-dev</depend>
  <depend>libopencv-imgproc-dev</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
